Disable Quantity input if edited

--- a/VsiteZavrsniRad/VsiteZavrsniRad.csproj
+++ b/VsiteZavrsniRad/VsiteZavrsniRad.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Components\**" />
+    <Compile Remove="Data\**" />
+    <Content Remove="Components\**" />
+    <Content Remove="Data\**" />
+    <EmbeddedResource Remove="Components\**" />
+    <EmbeddedResource Remove="Data\**" />
+    <None Remove="Components\**" />
+    <None Remove="Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
@@ -18,11 +29,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Radzen.Blazor" Version="3.18.16" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Components\" />
   </ItemGroup>
 
 </Project>
